--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "gridjs-vue": "^0.5.2",
+    "sweetalert2": "^10.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "sweetalert2": "^10.3.0",
     "vue-simple-alert": "^1.1.1"
   },
   "devDependencies": {
